--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "silex/silex": "v1.1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=3.7.24"
+        "phpunit/phpunit": "~3.7"
     },
     "autoload": {
         "psr-0": {
