--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,15 @@
         }
     ],
     "require": {
-        "silex/silex": "v1.1.2"
+        "silex/silex": "v1.1.2",
+        "php":         ">=5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~3.7"
     },
     "autoload": {
         "psr-0": {
-            "KyraD\\Silex": "src"
+            "KyraD\\Stack\\": "src"
         }
     }
 }
