--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "php":         ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit":           "~3.7",
+        "squizlabs/php_codesniffer": "1.4.*",
+        "satooshi/php-coveralls":    "~0.6"
     },
     "autoload": {
         "psr-0": {
